fix after refresh role displaying